# shellify

./: 2  CMakeLists.txt  README.md  build.sh  install.sh  run.sh  shellify.desktop
src/: audio.c  audio.h  buffer.c  buffer.h  config.c  config.h  controller.c  controller.h  db_handler.c  db_handler.h  dl_handler.c  dl_handler.h  dl_queue.c  dl_queue.h  error_handler.c  error_handler.h  file.c  file.h  input.c  input.h  library.c  library.h  logger.c  logger.h  main.c  rect.c  rect.h  shellify.c  shellify.h  signal.c  signal.h  stg_handler.c  stg_handler.h  storage.c  storage.h  tui.c  tui.h  vec.h
